# os

./: .gdbinit  .gitignore  CMakeLists.txt  Makefile  README.md  ata.c  ata.h  console.c  console.h  debug.sh  errors.h  gdbargs  gdt.c  gdt.h  idt.c  idt.h  init.c  init.h  isr_stubs.S  kernel.ld  keyboard.c  keyboard.h  mkimg.sh  pmm.c  run-qemu.sh  start.S  task.c  task.h  trailing-space.sh  util.c  util.h
io/: ata.c  ata.h  device.h  gpt.c  uart.c
src/: Makefile
src/kernel/: CMakeLists.txt  Makefile  console.c  console.h  errors.h  gdt.c  gdt.h  idt.c  idt.h  init.c  init.h  keyboard.c  keyboard.h  mmu.c  mmu.h  pit.c  pit.h  pmm.c  pmm.h  stackguard.c  stackguard.h  task.c  task.h  time.c  time.h  util.c  util.h
src/kernel/i386/: Makefile  flags.cmake
src/kernel/i386/pc/: Makefile  layout.ld  paging.S  start.S  task_switch.S  toolchain.cmake
src/kernel/io/: Makefile  ata.c  ata.h  gpt.c  gpt.h  uart.c  uart.h
src/kernel/mm/: CMakeLists.txt  Makefile  mmap.h  paging.c  paging.h  pmm.c  pmm.h
