CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(os)
ENABLE_LANGUAGE(ASM)

FUNCTION(LOAD_PROFILE ISA PLATFORM)
    # Obtain sources for the ISA
    FILE(GLOB ISA_SRCS "${PROJECT_SOURCE_DIR}/src/kernel/${ISA}/*.c" "${PROJECT_SOURCE_DIR}/src/kernel/${ISA}/*.S")
    FILE(GLOB PLATFORM_SRCS "${PROJECT_SOURCE_DIR}/src/kernel/${ISA}/${PLATFORM}/*.c" "${PROJECT_SOURCE_DIR}/src/kernel/${ISA}/${PLATFORM}/*.S")

    # Load flags associated with ISA and Profile
    INCLUDE("${PROJECT_SOURCE_DIR}/src/kernel/${ISA}/flags.cmake")
    INCLUDE("${PROJECT_SOURCE_DIR}/src/kernel/${ISA}/${PLATFORM}/flags.cmake")

    # Now export our output variables
    SET(ISA_SRCS ${ISA_SRCS} PARENT_SCOPE)
    SET(PLATFORM_SRCS ${PLATFORM_SRCS} PARENT_SCOPE)
    SET(PLATFORM_LAYOUT "${PROJECT_SOURCE_DIR}/src/kernel/${ISA}/${PLATFORM}/layout.ld" PARENT_SCOPE)

    # And specific flags
    SET(ISA_C_FLAGS ${ISA_C_FLAGS} PARENT_SCOPE)
    SET(ISA_ASM_FLAGS ${ISA_ASM_FLAGS} PARENT_SCOPE)
    SET(ISA_LINKER_FLAGS ${ISA_LINKER_FLAGS} PARENT_SCOPE)
    # ...
ENDFUNCTION(LOAD_PROFILE)

ADD_SUBDIRECTORY(src/kernel)