FILE(GLOB GENERIC_SRCS "*.[cS]")

ADD_SUBDIRECTORY(io)
ADD_SUBDIRECTORY(mm)

# We could also use CMakeCache variables here!
LOAD_PROFILE("i386" "pc")
MESSAGE(STATUS ${GENERIC_SRCS})

# Now set up our environment
ADD_EXECUTABLE(kernel ${PLATFORM_SRCS} ${ISA_SRCS} ${GENERIC_SRCS})
TARGET_INCLUDE_DIRECTORIES(kernel PUBLIC "${PROJECT_SOURCE_DIR}/src/kernel")

SET(CMAKE_C_LINK_EXECUTABLE "ld <CMAKE_C_LINK_FLAGS> <LINK_FLAGS> <OBJECTS> -o <TARGET>")
SET(CMAKE_ASM_COMPILE_OBJECT "<CMAKE_ASM_COMPILER> -c ${ISA_ASM_FLAGS} ${PLATFORM_ASM_FLAGS} -o <OBJECT> <SOURCE>")
SET(CMAKE_C_FLAGS "${ISA_C_FLAGS} ${PLATFORM_C_FLAGS}")

MESSAGE(STATUS ${ISA_LINKER_FLAGS})
MESSAGE(STATUS ${ISA_C_FLAGS})
MESSAGE(STATUS ${ISA_ASM_FLAGS})

SET_TARGET_PROPERTIES(kernel PROPERTIES LINK_FLAGS "-T ${PLATFORM_LAYOUT} ${ISA_LINKER_FLAGS} ${PLATFORM_LINKER_FLAGS}")
