FILE(GLOB GENERIC_SRCS "*.[cS]")

set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "")

# this one is important
SET(CMAKE_SYSTEM_NAME os)
#this one not so much
SET(CMAKE_SYSTEM_VERSION 1)

# specify the cross compiler
SET(CMAKE_C_COMPILER   i686-elf-gcc)
SET(CMAKE_CXX_COMPILER i686-elf-g++)
SET(CMAKE_ASM_COMPILER i686-elf-gcc)

ADD_SUBDIRECTORY(io)
ADD_SUBDIRECTORY(mm)

# We could also use CMakeCache variables here!
LOAD_PROFILE("i386" "pc")
MESSAGE(STATUS ${GENERIC_SRCS})

SET(CMAKE_C_FLAGS "${ISA_C_FLAGS} ${PLATFORM_C_FLAGS} -ffreestanding")

MESSAGE(STATUS ${ISA_LINKER_FLAGS})
MESSAGE(STATUS ${ISA_C_FLAGS})

# Now set up our environment
ADD_EXECUTABLE(kernel ${PLATFORM_SRCS} ${ISA_SRCS} ${GENERIC_SRCS})
TARGET_INCLUDE_DIRECTORIES(kernel PUBLIC "${PROJECT_SOURCE_DIR}/src/kernel")

SET_TARGET_PROPERTIES(kernel PROPERTIES LINK_FLAGS "-T ${PLATFORM_LAYOUT} ${ISA_LINKER_FLAGS} ${PLATFORM_LINKER_FLAGS}")
